@@ -14,11 +14,13 @@ import kr.elroy.aigoya.product.repository.ProductRepository;
 import kr.elroy.aigoya.store.domain.Store;
 import kr.elroy.aigoya.store.repository.StoreRepository;
 import kr.elroy.aigoya.store.exception.StoreNotFoundException;
+import kr.elroy.aigoya.store.repository.StoreRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -103,7 +105,7 @@ public class MyOrderService {
         List<OrderProduct> newOrderProducts = newOrderProductDtos
                 .stream()
                 .map(orderProductDto -> createOrderProduct(currentStoreId, order, orderProductDto))
-                .toList();
+                .collect(Collectors.toList());
 
         order.setTotalPrice(calculateTotalPrice(newOrderProducts));
         order.setOrderProducts(newOrderProducts);
